[gd_scene load_steps=2 format=3 uid="uid://wb64fs4i4iwv"]

[ext_resource type="Script" path="res://components/health_component.gd" id="1_ovhfe"]

[node name="HealthComponent" type="Node"]
script = ExtResource("1_ovhfe")

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
